--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="93b7af">  <td>20/06/02 17:08:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.ether.runner.CucumberTestRunner@595b007d]">feature</td> 
-  <td>main@168907708</td>   <td></td> </tr>
-<tr bgcolor="93b7af">  <td>20/06/02 17:08:25</td>   <td>-623</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.ether.runner.CucumberTestRunner@595b007d]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@168907708</td>   <td></td> </tr>
-<tr bgcolor="b29185">  <td>20/06/02 17:08:25</td>   <td>-310</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CucumberTestRunner.setup()[pri:0, instance:com.ether.runner.CucumberTestRunner@595b007d]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@168907708</td>   <td></td> </tr>
-<tr bgcolor="93b7af">  <td>20/06/02 17:09:59</td>   <td>93409</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.ether.runner.CucumberTestRunner@595b007d]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@168907708</td>   <td></td> </tr>
+<tr bgcolor="a3cd88">  <td>20/06/03 00:34:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.ether.runner.CucumberTestRunner@149494d8]">feature</td> 
+  <td>main@1586845078</td>   <td></td> </tr>
+<tr bgcolor="a3cd88">  <td>20/06/03 00:34:33</td>   <td>26577</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.ether.runner.CucumberTestRunner@149494d8]">feature</td> 
+  <td>main@1586845078</td>   <td></td> </tr>
+<tr bgcolor="a3cd88">  <td>20/06/03 00:35:33</td>   <td>87036</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.ether.runner.CucumberTestRunner@149494d8]">feature</td> 
+  <td>main@1586845078</td>   <td></td> </tr>
+<tr bgcolor="a3cd88">  <td>20/06/03 00:35:51</td>   <td>104752</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.ether.runner.CucumberTestRunner@149494d8]">feature</td> 
+  <td>main@1586845078</td>   <td></td> </tr>
+<tr bgcolor="a3cd88">  <td>20/06/03 00:36:44</td>   <td>157809</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.ether.runner.CucumberTestRunner@149494d8]">feature</td> 
+  <td>main@1586845078</td>   <td></td> </tr>
+<tr bgcolor="a3cd88">  <td>20/06/03 00:37:04</td>   <td>177507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.ether.runner.CucumberTestRunner@149494d8]">feature</td> 
+  <td>main@1586845078</td>   <td></td> </tr>
+<tr bgcolor="a3cd88">  <td>20/06/03 00:37:51</td>   <td>225212</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.ether.runner.CucumberTestRunner@149494d8]">feature</td> 
+  <td>main@1586845078</td>   <td></td> </tr>
+<tr bgcolor="a3cd88">  <td>20/06/03 00:38:07</td>   <td>240704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.ether.runner.CucumberTestRunner@149494d8]">feature</td> 
+  <td>main@1586845078</td>   <td></td> </tr>
+<tr bgcolor="a3cd88">  <td>20/06/03 00:38:32</td>   <td>266004</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.ether.runner.CucumberTestRunner@149494d8]">feature</td> 
+  <td>main@1586845078</td>   <td></td> </tr>
+<tr bgcolor="a3cd88">  <td>20/06/03 00:38:58</td>   <td>291770</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.ether.runner.CucumberTestRunner@149494d8]">feature</td> 
+  <td>main@1586845078</td>   <td></td> </tr>
+<tr bgcolor="a3cd88">  <td>20/06/03 00:39:31</td>   <td>324430</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.ether.runner.CucumberTestRunner@149494d8]">feature</td> 
+  <td>main@1586845078</td>   <td></td> </tr>
+<tr bgcolor="a3cd88">  <td>20/06/03 00:34:06</td>   <td>-453</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.ether.runner.CucumberTestRunner@149494d8]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1586845078</td>   <td></td> </tr>
+<tr bgcolor="96b1f3">  <td>20/06/03 00:34:06</td>   <td>-223</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CucumberTestRunner.setup()[pri:0, instance:com.ether.runner.CucumberTestRunner@149494d8]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1586845078</td>   <td></td> </tr>
+<tr bgcolor="a3cd88">  <td>20/06/03 00:39:52</td>   <td>345781</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.ether.runner.CucumberTestRunner@149494d8]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1586845078</td>   <td></td> </tr>
 </table>
